tests/NormalTests/paczka1/small_fuzzy/81020188.err
Error in line 9: CUkuBMTrI A976 161,5
Error in line 6: ZI7YWE A328 157,7
